Revision 2. Fixed syntax errors. Changed the main section

--- a/css/main.css
+++ b/css/main.css
@@ -202,12 +202,15 @@ body, html {
     transition: none; } }
 .cloud_moon {
   position: absolute;
-  top: -50%;
-  margin-top: -400px;
+  top: -140%;
+  right: 18%;
   overflow: visible; }
   .cloud_moon svg {
-    width: 500px;
-    transform: scale(0.5, 0.5); }
+    width: 100%;
+    transform: scale(1.8, 1.8);
+    -moz-transform: scale(1, 1);
+    stroke-dashoffset: 0;
+    background: transparent; }
 
 .climacon_componentWrap-moon {
   animation-iteration-count: infinite;
@@ -610,7 +613,18 @@ body, html {
   padding-left: 6%;
   padding-top: 10%;
   padding-bottom: 10%;
-  color: #3597d3; }
+  color: #3597d3;
+  /*     h2:before {
+       background: #ddd;
+       content: "";
+       display: block;
+       height: 2px;
+       position: absolute;
+       top: 25%;
+       left: 32%;
+       width: 30%;
+     } 
+     */ }
   #profile ul {
     list-style: none;
     font-family: Lato_thinitalic;
@@ -622,15 +636,6 @@ body, html {
     font-family: Lato_light;
     font-size: 65px;
     padding-bottom: 20px; }
-  #profile h2:before {
-    background: #ddd;
-    content: "";
-    display: block;
-    height: 2px;
-    position: absolute;
-    top: 25%;
-    left: 32%;
-    width: 30%; }
   #profile span {
     font-family: Lato_light;
     color: #dbdbdb; }
@@ -656,9 +661,10 @@ body, html {
     width: 70%;
     height: auto; }
   #profile .line_solid {
-    top: 31%;
+    top: 26%;
     width: 30%;
-    left: 34%; }
+    left: 40%;
+    position: absolute; }
   #profile .us {
     font-family: Lato_semibold; }
   #profile .us:hover {
@@ -925,16 +931,14 @@ MEDIA QUERIES
 
   #profile li {
     font-size: 22px; }
+  #profile .line_solid {
+    display: none; }
 
   #loader .container {
     left: 25%; }
 
   #projects .line_solid {
     top: 160px; }
-
-  #profile h2:before {
-    top: 19%;
-    width: 70%; }
 
   #profile {
     padding-left: 0;
