--- a/css/main.scss
+++ b/css/main.scss
@@ -13,7 +13,7 @@ body, html {
     .line_solid{
     width: 39px;
     background: #fff;
-    height: 3px;
+    height: 1.5px;
     }
 
 /*===============
@@ -169,8 +169,7 @@ body, html {
 *BACKGROUND
 =================================================*/
 .bg-main {
-    background: #fff;
-    background-image: url('../img/main_bg0.jpg');
+    background: #74ddf4;
     background-size: cover;
     position: fixed;
     top: 0;
@@ -217,7 +216,8 @@ body, html {
 }
 
 #main{
-    width: 100%;
+    margin-right: -15px;
+    margin-left: -15px;
     height: 1080px;
     max-width: 100%;
     max-height:auto;
@@ -254,7 +254,8 @@ svg {
 
 #Layer_2{
     margin-top: 20%;
-    margin-right: -10%;
+    margin-right: -15px;
+    font-family: Lato_semibold;
 }
 
 @keyframes draw {
@@ -274,9 +275,10 @@ $baseAnimationDuration: 18s;
 $size: 100px;
 $svgSize: 70px;
 .cloud_moon{
+    text-align: right;
     position: absolute;
     top: -125%;
-    right: 10%;
+    right: 0;
     overflow: visible;
     svg{
     width: 95%;
@@ -364,12 +366,12 @@ $svgSize: 70px;
 #projects{
     position: relative;
     margin-top: 150px;
-    font-family: Lato_light;
+    font-family: Lato_semibold;
     h2{
-    font-family: Lato_thin;
+    font-family: Lato_light;
     text-align: left;
     font-size: 55px;
-    padding-bottom: 40px;
+    padding-bottom: 15px;
         
         span{
         font-family: Lato_semibold;
@@ -384,10 +386,8 @@ $svgSize: 70px;
     }
     
     .line_solid{
-    position: absolute;
     top: 53px;
-    left: 50%;
-    width: 520px;
+    width: 97%;
         
     }
     
@@ -444,7 +444,7 @@ $svgSize: 70px;
 
 .grid figcaption {
     color: #041182;
-	background: #e4e4e4;
+	background: #b6f2ff;
 	padding: 25px;
 }
 
@@ -548,11 +548,11 @@ $svgSize: 70px;
     
     .project_tech{
  color: #f76767;
-font-family: Lato_light;
+font-family: Lato_semibold;
         span{
         font-size: 12px;
         padding: 3px;
-        font-family: Lato_thin;
+        font-family: Lato_semibold;
         text-transform: uppercase;
         background: #0000d4;
         color: #fff;
@@ -612,7 +612,7 @@ figcaption h3 {
 	top: 0;
 	right: 5%;
 	padding: 0.5em 1em;
-    font-weight: 100;
+  font-weight: 100;
 	color: #fff;
 }
 
@@ -639,7 +639,7 @@ figcaption h3 {
     }
     
     span.typcn-times{
-        color: red;
+        color: white;
         transition: 0.5s ease-in;
     }
     
@@ -719,20 +719,21 @@ figcaption h3 {
     h3{
     padding-top: 50px;
     font-size: 40px;
-    font-family: Lato_thinitalic;
+    font-family: Lato_bold;
     }
     
     h4{
-    font-family: Lato_thin;
+    font-family: Lato_semibold;
     font-size: 25px;
-    color: #dbdbdb;
+    color: #fff;
         :after{
         border-bottom: 2px solid #fff;
         }
     }
     
     h6{
-    color: #dbdbdb;
+    font-family: Lato_semibold;
+    color: #fff;
     font-size: 18px;
     padding-bottom: 60px;
     }
@@ -744,17 +745,25 @@ figcaption h3 {
     }
 
     h6:before {
-      background: #ddd;
+      background: #fff;
       content: "";
       display: block;
-      height: 1px;
+      height: 2px;
       position: absolute;
       top: 15%;
       width: 90%;
     }   
     
 }
-    
+
+#mail-link{
+  text-decoration: none;
+  color: white;
+}
+#mail-link:active{
+  text-decoration: none;
+}
+
 /*=======================
 *EVENTS
 =======================*/
@@ -762,13 +771,16 @@ figcaption h3 {
   text-align: left;
   padding-top: 80px;
   position: relative;
+  h3{
+    font-family: Lato_semibold;
+  }
   
     h2{
     text-align: right;
     text-transform: uppercase;
     font-family: Lato_light;
     font-size: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 15px;
         
         span{
         font-family: Lato_semibold;
@@ -781,10 +793,8 @@ figcaption h3 {
     }
     
     .line_right{
-    top: 0;
-    position: absolute;
-    top: 10%;
-    width: 20%;
+    float: right;
+    width: 100%;
     }
     
     
@@ -807,7 +817,7 @@ figcaption h3 {
     }
     
     .event_title{
-    font-family: Lato_thinitalic;
+    font-family: Lato_semibold;
     font-size: 25px;
     color: #fff;
     }
@@ -815,10 +825,10 @@ figcaption h3 {
 
     
     p{
-    font-family: Lato_thin;
+    font-family: Lato_semibold;
     font-size: 20px;
-    color: #dbdbdb;
-    padding-bottom: 35px;
+    color: #fff;
+    padding-bottom: 15px;
     }
     
     .event_padding{
@@ -873,8 +883,8 @@ figcaption h3 {
         }
     }
     h4{
-    font-family: Lato_light;
-    color: #dbdbdb;
+    font-family: Lato_semibold;
+    color: #fff;
     }
     
     
@@ -898,17 +908,20 @@ figcaption h3 {
         font-size: 30px;
         
     }
+    h3{
+      font-family: Lato_semibold;
+    }
     h2{
     text-transform: uppercase;
     color: #fff;
     left: -40px;
-    font-family: Lato_light;
+    font-family: Lato_semibold;
     font-size: 60px;
     padding-bottom: 20px;
         
     }
  /*     h2:before {
-      background: #ddd;
+      background: #fff;
       content: "";
       display: block;
       height: 2px;
@@ -921,8 +934,8 @@ figcaption h3 {
     
     
     span{
-    font-family: Lato_light;
-        color: #dbdbdb;
+    font-family: Lato_semibold;
+        color: #fff;
     }
     
     a{
@@ -959,10 +972,7 @@ figcaption h3 {
     }
     
     .line_solid{
-    top: 22%;
-    width: 30%;
-    left: 42%;
-    position: absolute;
+    width: 97%;
     }
     
         .us{
@@ -977,21 +987,20 @@ figcaption h3 {
 
 }
 
-.csi_type{
-    svg{
+.csi_type img{
     width: 16%;
     height: auto;
     top: 25px;
     background: transparent;
     display: block;
     position: absolute;
-    right: 30px;}
+    right: 30px;
 }
 
 .line_solid{
 width: 39px;
 background: #fff;
-height: 3px;
+height: 2px;
 }
 
 
@@ -1118,7 +1127,7 @@ height: 3px;
   top: 10%;
   left: 30px;
   line-height: 40px;
-  font-family: Lato_thin;
+  font-family: Lato_semibold;
   font-size: 30px;
   position: absolute;
   width: 100%;
@@ -1283,7 +1292,7 @@ MEDIA QUERIES
     #profile{
         li{
         font-size: 18px;
-        margin-left: -51px;
+        margin-left: -5;
         }
         .line_solid{
         display: none;
